--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mime-types": "^3.0.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "mysql2": "^3.14.3"
+    "mysql2": "^3.14.3",
+    "sharp": "^0.34.3"
   }
 }
