--- a/github/workflow/test.yml
+++ b/github/workflow/test.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:   # ✅ this enables "Run workflow" button in GitHub Actions tab
 
 jobs:
   test:
