--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+      
+
+   workflow_dispatch:   # 👈 this enables manual trigger from GitHub UI
 
 jobs:
   deploy:
