--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-
 name: Deploy Project
 
 on:
@@ -16,10 +15,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Clear npm cache
-        run: npm cache clean --force
+      - name: Cache npm
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-      - run: npm ci
+      - run: npm ci --retry=5 --fetch-retries=5
       - run: npm run build
 
       - name: Get SSH keys and set permissions
