--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"No tests available\" && exit 0",
-    "build": "echo \"No build step\""
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
